--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -60,7 +60,7 @@
                         <th>รูป</th>
                         <th>ลำดับแสดงผล</th>
                         <th>ชื่อ Order</th>
-                        <th>brand</th>
+                        <th>Brand</th>
                         <th>หมวดหมู่</th>
                         <th>ประเภท Order</th>
                         <th>วันที่สร้าง</th>
