--- a/src/app/modules/admin/game/list/list.component.html
+++ b/src/app/modules/admin/game/list/list.component.html
@@ -16,13 +16,12 @@
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="addElement()">
                         <mat-icon>add</mat-icon>
                         &nbsp;
-                        เพิ่ม
+                        เพิ่ม Game
                     </button>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- Main -->
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg m-10  bg-white">
         <form [formGroup]="form" class="mx-4">
