--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -16,7 +16,7 @@
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="addElement()">
                         <mat-icon>add</mat-icon>
                         &nbsp;
-                        เพิ่ม
+                        เพิ่ม Order
                     </button>
                 </div>
             </div>
