--- a/src/app/modules/admin/order/form/form.component.html
+++ b/src/app/modules/admin/order/form/form.component.html
@@ -6,7 +6,7 @@
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between items-center">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    {{ Id ? 'แก้ไข Order' : 'เพิ่ม Order' }}
+                    {{ Id ? 'แก้ไข หน้าเว็บเพจ' : 'เพิ่ม หน้าเว็บเพจ' }}
                 </h2>
             </div>
 
