--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -10,13 +10,13 @@
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    รายการ Order
+                    รายการหน้าเว็บเพจ
                 </h2>
                 <div class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="addElement()">
                         <mat-icon>add</mat-icon>
                         &nbsp;
-                        เพิ่ม Order
+                        เพิ่ม หน้าเว็บเพจ
                     </button>
                 </div>
             </div>
