--- a/src/app/modules/admin/game/list/list.component.html
+++ b/src/app/modules/admin/game/list/list.component.html
@@ -71,7 +71,7 @@
                         <td>
                             <div class="grid w-full place-items-center overflow-x-scroll rounded-lg p-2 lg:overflow-visible cursor-pointer"
                                 (click)="showPicture(item.image)">
-                                <img class="object-cover object-center rounded-lg h-20 w-20" [src]="item.image" />
+                                <img class="object-cover object-center rounded-lg h-auto w-full" [src]="item.image" />
                             </div>
                         </td>
                         <td>{{ item.name ? item.name : "-" }}</td>
