--- a/src/app/modules/admin/game/list/list.component.html
+++ b/src/app/modules/admin/game/list/list.component.html
@@ -54,14 +54,14 @@
             <table datatable [dtOptions]="dtOptions" class="table row-border hover w-full bg-white whitespace-nowrap">
                 <thead>
                     <tr>
-                        <th class="w-[10px]">ลำดับ</th>
-                        <th>รูป</th>
-                        <th>ชื่อเกม</th>
-                        <th>Brand</th>
-                        <th>ประเภทเกม</th>
-                        <th>ลำดับ</th>
-                        <th>วันที่สร้าง</th>
-                        <th class="w-[100px]">จัดการ</th>
+                        <th class="w-[10px] text-left">ลำดับ</th>
+                        <th class="w-[60px] text-left">รูป</th>
+                        <th class="text-left">ชื่อเกม</th>
+                        <th class="text-left">Brand</th>
+                        <th class="text-left">ประเภทเกม</th>
+                        <th class="text-left">ลำดับ</th>
+                        <th class="text-left">วันที่สร้าง</th>
+                        <th class="w-[100px] text-left">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody *ngIf="dataRow?.length != 0">
