--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -56,23 +56,25 @@
                 <thead>
                     <tr>
 
-                        <th class="w-[10px]">ลำดับ</th>
-                        <th>รูป</th>
-                        <th>ลำดับแสดงผล</th>
-                        <th>ชื่อ Order</th>
-                        <th>Brand</th>
-                        <th>หมวดหมู่</th>
-                        <th>ประเภท Order</th>
-                        <th>วันที่สร้าง</th>
-                        <th class="w-[100px]">จัดการ</th>
+                        <th class="w-[10px] text-left">ลำดับ</th>
+                        <th class="w-[60px] text-left">รูป</th>
+                        <th class="text-left ">ลำดับแสดงผล</th>
+                        <th class="text-left">ชื่อ Order</th>
+                        <th class="text-left">Brand</th>
+                        <th class="text-left">หมวดหมู่</th>
+                        <th class="text-left">ประเภท Order</th>
+                        <th class="text-left">วันที่สร้าง</th>
+                        <th class="w-[100px] text-left">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody *ngIf="dataRow?.length != 0">
                     <tr *ngFor="let item of dataRow; let i = index">
                         <td>{{ pages.begin + (i + 1) }}</td>
-                        <td> <button mat-icon-button color="accent" (click)="showPicture(item.image)" [disabled]="item.type === 'Text'">
-                                <mat-icon>image</mat-icon>
-                            </button>
+                        <td> 
+                            <div class="grid w-full place-items-center overflow-x-scroll rounded-lg p-2 lg:overflow-visible cursor-pointer"
+                                (click)="showPicture(item.image)">
+                                <img class="object-cover object-center rounded-lg h-auto w-full" [src]="item.image" />
+                            </div>
                         </td>
                         <td>{{ item.show_step ? item.show_step : "-" }}</td>
                         <td>{{ item.name ? item.name : "-" }}</td>
