--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -57,14 +57,14 @@
                     <tr>
 
                         <th class="w-[10px] text-left">ลำดับ</th>
-                        <th class="w-[60px] text-left">รูป</th>
-                        <th class="text-left ">ลำดับแสดงผล</th>
+                        <th class="w-[100px] text-left">รูป</th>
                         <th class="text-left">ชื่อ Order</th>
                         <th class="text-left">Brand</th>
                         <th class="text-left">หมวดหมู่</th>
                         <th class="text-left">ประเภท Order</th>
+                        <th class="text-left ">ลำดับ</th>
                         <th class="text-left">วันที่สร้าง</th>
-                        <th class="w-[100px] text-left">จัดการ</th>
+                        <th class="w-[80px] text-left">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody *ngIf="dataRow?.length != 0">
@@ -76,11 +76,11 @@
                                 <img class="object-cover object-center rounded-lg h-auto w-full" [src]="item.image" />
                             </div>
                         </td>
-                        <td>{{ item.show_step ? item.show_step : "-" }}</td>
                         <td>{{ item.name ? item.name : "-" }}</td>
                         <td>{{ item.brand ? item.brand : "-" }}</td>
                         <td>{{ item.category ? item.category?.name : "-" }}</td>
                         <td>{{ item.type ? item.type : "-" }}</td>
+                        <td>{{ item.show_step ? item.show_step : "-" }}</td>
                         <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
                         <td>
                             <button mat-icon-button color="accent" (click)="editElement(item)">
