--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -58,12 +58,12 @@
 
                         <th class="w-[10px]">ลำดับ</th>
                         <th>รูป</th>
-                        <th>ลำดับแสดงผล</th>
-                        <th>ชื่อ Order</th>
-                        <th>Brand</th>
-                        <th>หมวดหมู่</th>
-                        <th>ประเภท Order</th>
-                        <th>วันที่สร้าง</th>
+                        <th class="text-left">ลำดับแสดงผล</th>
+                        <th class="text-left">ชื่อรายการ</th>
+                        <th class="text-left">Brand</th>
+                        <th class="text-left">หมวดหมู่</th>
+                        <th class="text-left">ประเภทข้อมูล</th>
+                        <th class="text-left">วันที่สร้าง</th>
                         <th class="w-[100px]">จัดการ</th>
                     </tr>
                 </thead>
