--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -54,14 +54,14 @@
                         </mat-error>
                     </mat-form-field>
 
-                    <mat-form-field class="w-full">
-                        <mat-label>เลือกประเภท</mat-label>
+                    <!-- <mat-form-field class="w-full">
+                        <mat-label>เลือก Website</mat-label>
                         <mat-select [formControlName]="'brand'">
-                            <mat-option *ngFor="let option of ['K', 'R', 'A']" [value]="option">
+                            <mat-option *ngFor="let option of ['KGG', 'RG', 'AMB']" [value]="option">
                                 {{ option }}
                             </mat-option>
                         </mat-select>
-                    </mat-form-field>
+                    </mat-form-field> -->
                    
 
                     <!-- Submit button -->
