--- a/src/app/modules/admin/banner/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/banner/form-dialog/form-dialog.component.html
@@ -6,6 +6,19 @@
                 <div class="flex flex-col mx-3 md:flex mb-6 w-full">
                     <div class="md:w-full px-3">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
+                            <mat-label>Website</mat-label>
+                            <mat-select [formControlName]="'brand'">
+                                <mat-option [value]="null">
+                                    ทั้งหมด
+                                </mat-option>
+                                <mat-option *ngFor="let item of brand;" value="{{item}}">
+                                    {{item == 'K' ? "KGG":item == 'R' ? 'RG':item == 'A' ? 'AMB':'AMB'}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="md:w-full px-3">
+                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
                             <mat-label>ลำดับ</mat-label>
                             <input matInput [placeholder]="'กรอกข้อมูลลำดับ'" formControlName="show_step">
                         </mat-form-field>
@@ -21,15 +34,16 @@
                         </mat-form-field>
                     </div>
                     <div class="md:w-full px-3">
-                        <ngx-dropzone (change)="onSelect($event)" >
+                        <ngx-dropzone (change)="onSelect($event)">
                             <ngx-dropzone-label>เลือกรูป</ngx-dropzone-label>
                             <div *ngFor="let f of files">
-                                <ngx-dropzone-image-preview [file]="f" [removable]="true" (removed)="onRemove(f)"></ngx-dropzone-image-preview>
+                                <ngx-dropzone-image-preview [file]="f" [removable]="true"
+                                    (removed)="onRemove(f)"></ngx-dropzone-image-preview>
                             </div>
                         </ngx-dropzone>
                     </div>
                     <div class="flex justify-center w-full px-3" *ngIf="this.url_image">
-                        <img class="object-cover h-44 w-auto border-2 border-gray-50 rounded-sm"
+                        <img class="object-cover h-34 w-auto border-2 border-gray-50 rounded-sm"
                             src="{{this.url_image}}">
                     </div>
                 </div>
