--- a/src/app/modules/admin/banner/list/list.component.html
+++ b/src/app/modules/admin/banner/list/list.component.html
@@ -24,10 +24,21 @@
     </div>
 
     <!-- Main -->
-     
+
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg m-10  bg-white">
         <form [formGroup]="form" class="mx-4">
             <div class="flex flex-col md:flex-row pb-2 mt-5 gap-2">
+                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
+                    <mat-label>Website</mat-label>
+                    <mat-select [formControlName]="'brand'" (selectionChange)="rerender()">
+                        <mat-option [value]="null">
+                            ทั้งหมด
+                        </mat-option>
+                        <mat-option *ngFor="let item of brands;" value="{{item}}">
+                            {{item == 'K' ? "KGG":item == 'R' ? 'RG':item == 'A' ? 'AMB':'AMB'}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
                 <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
                     <mat-label>ประเภท</mat-label>
                     <mat-select [formControlName]="'type'" (selectionChange)="rerender()">
@@ -39,17 +50,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
-                    <mat-label>Brand</mat-label>
-                    <mat-select [formControlName]="'brand'" (selectionChange)="rerender()">
-                        <mat-option [value]="null">
-                            ทั้งหมด
-                        </mat-option>
-                        <mat-option *ngFor="let item of brands;" value="{{item}}">
-                            {{item}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
+
             </div>
         </form>
         <div class="flex flex-col flex-auto p-5  sm:overflow-y-auto">
@@ -60,7 +61,7 @@
                         <th class="w-1/12 text-center">รูป</th>
                         <th class="w-2/12 text-center">ลำดับการแสดงผล</th>
                         <th class="w-1/12 text-center">ประเภท</th>
-                        <th class="w-1/12 text-center">Brand</th>
+                        <th class="w-1/12 text-center">Website</th>
                         <th class="w-1/12 text-center">วันที่สร้าง</th>
                         <th class="w-1/12 text-center">จัดการ</th>
                     </tr>
@@ -69,14 +70,17 @@
                     <tr *ngFor="let item of dataRow; let i = index">
                         <td>{{ pages.begin + (i + 1) }}</td>
                         <td>
-                            <div
-                                class="grid w-full place-items-center overflow-x-scroll rounded-lg p-2 lg:overflow-visible cursor-pointer" (click)="showPicture(item.image)">
+                            <div class="grid w-full place-items-center overflow-x-scroll rounded-lg p-2 lg:overflow-visible cursor-pointer"
+                                (click)="showPicture(item.image)">
                                 <img class="object-cover object-center rounded-lg h-20 w-auto" [src]="item.image" />
                             </div>
                         </td>
                         <td class="text-center">{{ item.show_step ?? '' }}</td>
                         <td class="text-center">{{ item.type ?? '' }}</td>
-                        <td class="text-center">{{ item.brand ?? '' }}</td>
+                        <td class="text-center">
+                            {{item.brand == 'K' ? "KGG":item.brand == 'R' ? 'RG':item.brand == 'A' ?
+                            'AMB':'-'}}
+                        </td>
                         <td class="text-center">{{ item.created_at | date : "dd-MM-yyyy hh:mm a " }}</td>
                         <td class="text-center">
                             <button mat-icon-button color="accent" (click)="editElement(item)">
