--- a/src/app/modules/admin/contact/form/form.component.html
+++ b/src/app/modules/admin/contact/form/form.component.html
@@ -18,20 +18,36 @@
                 [formGroup]="form">
                 <div class="flex flex-col gap-2 w-full">
                     <div class="w-full px-3 mb-6 md:mb-0">
+                        <div class="flex flex-col md:flex-row pb-2 mt-5 gap-2">
+                            <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
+                                <mat-label>Website</mat-label>
+                                <mat-select [formControlName]="'brand'">
+                                    <mat-option [value]="null">
+                                        ทั้งหมด
+                                    </mat-option>
+                                    <mat-option *ngFor="let item of brand;" value="{{item}}">
+                                        {{item == 'K' ? "KGG":item == 'R' ? 'RG':item == 'A' ? 'AMB':'AMB'}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="w-full px-3 mb-6 md:mb-0">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
                             <mat-label>Line</mat-label>
                             <input matInput formControlName="line">
                         </mat-form-field>
                     </div>
-                    <div class="mx-2 flex mb-6 flex-col  w-full md:w-full gap-2 mt-5">
+                    <div class="flex mb-6 flex-col  w-full md:w-full gap-2 mt-5">
                         <div class="w-full px-3 mb-6 md:mb-0">
+                            <h4>Script</h4>
                             <quill-editor [formControlName]="'chat'" [modules]="editorModules"
                                 [placeholder]="'Write something here...'" class="w-full h-full">
                             </quill-editor>
                         </div>
                     </div>
                 </div>
-                <div class="flex justify-end mt-10">
+                <div class="flex justify-end mt-15">
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="onSubmit()">
                         บันทึก
                     </button>
