--- a/src/app/modules/admin/dashboards/project/project.component.html
+++ b/src/app/modules/admin/dashboards/project/project.component.html
@@ -15,7 +15,7 @@
                         </ng-container>
                         <div class="flex items-center">
                             <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:bell'"></mat-icon>
-                            <div class="ml-1.5 leading-6 truncate text-secondary">คุณมี 15 การแจ้งเตือน</div>
+                            <div class="ml-1.5 leading-6 truncate text-secondary">คุณมี 0 การแจ้งเตือน</div>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                             <!-- Overdue -->
                             <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden h-full">
                                 <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Brand : KGG</div>
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Website : KGG</div>
                                     <div class="ml-2 -mt-2 -mr-3">
                                         <!-- <button mat-icon-button [matMenuTriggerFor]="overdueMenu">
                                             <mat-icon
@@ -88,7 +88,7 @@
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center mt-2">
-                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-red-500 h-full">{{graph?.k}}</div>
+                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-blue-500 h-full">{{graph?.k}}</div>
                                     <!-- <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
                                         <div class="text-md font-medium truncate">From yesterday:</div>
                                         <div class="ml-1.5 text-lg font-semibold">9</div>
@@ -98,7 +98,7 @@
                             <!-- Issues -->
                             <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Brand : RG</div>
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Website : RG</div>
                                     <div class="ml-2 -mt-2 -mr-3">
                                         <!-- <button mat-icon-button [matMenuTriggerFor]="issuesMenu">
                                             <mat-icon
@@ -113,7 +113,7 @@
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center mt-2">
-                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-amber-500">{{graph?.r}}</div>
+                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-green-500">{{graph?.r}}</div>
                                     <!-- <div class="text-lg font-medium text-amber-600 dark:text-amber-500">Open</div> -->
                                     <!-- <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
                                         <div class="text-md font-medium truncate">Closed today:</div>
@@ -124,7 +124,7 @@
                             <!-- Features -->
                             <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Brand : AMB</div>
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Website : AMB</div>
                                     <div class="ml-2 -mt-2 -mr-3">
                                         <!-- <button mat-icon-button [matMenuTriggerFor]="featuresMenu">
                                             <mat-icon
@@ -139,7 +139,7 @@
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center mt-2">
-                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-red-500">{{graph?.a}}</div>
+                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-amber-500">{{graph?.a}}</div>
                                     <!-- <div class="text-lg font-medium text-red-600 dark:text-red-500">Proposals</div> -->
                                     <!-- <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
                                         <div class="text-md font-medium truncate">Implemented:</div>
