--- a/src/app/modules/admin/game/form-dialog/form-dialog.component.html
+++ b/src/app/modules/admin/game/form-dialog/form-dialog.component.html
@@ -6,6 +6,20 @@
             <div class="flex-auto">
                 <div class="flex flex-col mx-3 md:flex mb-6">
                     <div class="md:w-full px-3">
+
+                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
+                            <mat-label>Website</mat-label>
+                            <mat-select [formControlName]="'brand'">
+                                <mat-option [value]="null">
+                                    ทั้งหมด
+                                </mat-option>
+                                <mat-option *ngFor="let item of brand;" value="{{item}}">
+                                    {{item == 'K' ? "KGG":item == 'R' ? 'RG':item == 'A' ? 'AMB':'AMB'}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="md:w-full px-3">
                         <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
                             <mat-label>name</mat-label>
                             <input matInput [placeholder]="'กรุณาระบุชื่อเกม'" formControlName="name">
@@ -29,12 +43,7 @@
                         </mat-form-field>
                     </div>
                     
-                    <div class="md:w-full px-3">
-                        <mat-form-field [ngClass]="formFieldHelpers" class="w-full">
-                            <mat-label>brand</mat-label>
-                            <input matInput [placeholder]="'กรุณาระบุ Brand'" formControlName="brand" readonly>
-                        </mat-form-field>
-                    </div>
+                   
                     <div class="md:w-full px-3" *ngIf="this.url_image">
                         <div class="flex justify-center md:w-full px-3">
                             <img class="object-cover h-44 w-auto border-2 border-gray-50 rounded-sm"
