--- a/src/app/modules/admin/game/list/list.component.html
+++ b/src/app/modules/admin/game/list/list.component.html
@@ -10,13 +10,13 @@
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
-                    รายการเกม
+                    รายการเกมส์
                 </h2>
                 <div class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                     <button class="px-6 ml-3" mat-flat-button [color]="'primary'" (click)="addElement()">
                         <mat-icon>add</mat-icon>
                         &nbsp;
-                        เพิ่ม Game
+                        เพิ่ม เกมส์
                     </button>
                 </div>
             </div>
@@ -26,6 +26,17 @@
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg m-10  bg-white">
         <form [formGroup]="form" class="mx-4">
             <div class="flex flex-col md:flex-row pb-2 mt-5 gap-2">
+                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
+                    <mat-label>Website</mat-label>
+                    <mat-select [formControlName]="'brand'" (selectionChange)="rerender()">
+                        <mat-option [value]="null">
+                            ทั้งหมด
+                        </mat-option>
+                        <mat-option *ngFor="let item of brand;" value="{{item}}">
+                            {{item == 'K' ? "KGG":item == 'R' ? 'RG':item == 'A' ? 'AMB':'AMB'}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
                 <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
                     <mat-label>ประเภทเกม</mat-label>
                     <mat-select [formControlName]="'game_categorie_id'" (selectionChange)="rerender()">
@@ -37,17 +48,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
-                    <mat-label>Brand</mat-label>
-                    <mat-select [formControlName]="'brand'" (selectionChange)="rerender()">
-                        <mat-option [value]="null">
-                            ทั้งหมด
-                        </mat-option>
-                        <mat-option *ngFor="let item of brand;" value="{{item}}">
-                            {{item}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
+
             </div>
         </form>
         <div class="flex flex-col flex-auto p-5  sm:overflow-y-auto">
@@ -57,7 +58,7 @@
                         <th class="w-[10px] text-left">ลำดับ</th>
                         <th class="w-[100px] text-left">รูป</th>
                         <th class="text-left">ชื่อเกม</th>
-                        <th class="text-left">Brand</th>
+                        <th class="text-left">Website</th>
                         <th class="text-left">ประเภทเกม</th>
                         <th class="text-left">ลำดับ</th>
                         <th class="text-left">วันที่สร้าง</th>
@@ -75,7 +76,10 @@
                             </div>
                         </td>
                         <td>{{ item.name ? item.name : "-" }}</td>
-                        <td>{{ item.brand ? item.brand : "-" }}</td>
+                        <td class="text-left">
+                            {{item.brand == 'K' ? "KGG":item.brand == 'R' ? 'RG':item.brand == 'A' ?
+                            'AMB':'-'}}
+                        </td>
                         <td>{{ item.category ? item.category?.name : "-" }}</td>
                         <td>{{ item.show_step ? item.show_step : "-" }}</td>
                         <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
